--- a/app/src/main/res/layout/activity_materia_detalhe.xml
+++ b/app/src/main/res/layout/activity_materia_detalhe.xml
@@ -8,6 +8,8 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,9 +18,15 @@
         android:layout_marginBottom="12dp"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/txt_Description2"
         android:textSize="18dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_remove_favorite"
+        android:onClick="toggleFavorite" />
 
 </LinearLayout>
