--- a/app/src/main/res/layout/activity_materia_detalhe.xml
+++ b/app/src/main/res/layout/activity_materia_detalhe.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     tools:context="br.edu.unibratec.projetofinalandroid.MateriaDetalheActivity"
     android:orientation="vertical"
-    android:padding="10dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="10dp"
+    >
 
 
 
@@ -23,10 +25,13 @@
         android:id="@+id/txt_Description2"
         android:textSize="18dp"/>
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btn_remove_favorite"
-        android:onClick="toggleFavorite" />
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_unfavorited"
+        app:layout_anchorGravity="bottom|right|end" />
 
 </LinearLayout>
