--- a/app/src/main/res/layout/activity_materia_detalhe.xml
+++ b/app/src/main/res/layout/activity_materia_detalhe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_materia_detalhe"
     android:layout_width="match_parent"
@@ -10,20 +10,25 @@
     android:padding="10dp"
     >
 
-
-
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txt_Title"
-        android:textSize="30dp"
-        android:layout_marginBottom="12dp"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txt_Description2"
-        android:textSize="18dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_Title"
+            android:textSize="30dp"
+            android:layout_marginBottom="12dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_Description2"
+            android:textSize="18dp"/>
+    </LinearLayout>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -33,6 +38,8 @@
         android:clickable="true"
         android:src="@drawable/ic_unfavorited"
         android:onClick="toggleFavorite"
-        app:layout_anchorGravity="bottom|right|end" />
+        android:layout_gravity="bottom|right"
+        app:layout_anchorGravity="bottom|right|end"
+        />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
